tests/ui/traits/trait-upcasting/multiple-supertraits-modulo-binder-vtable.stderr
error: vtable entries: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<dyn for<'a> Trait<&(), &'a ()> as Supertrait<&()>>::_print_numbers - shim(reify)),
           Method(<dyn for<'a> Trait<&(), &'a ()> as Trait<&(), &()>>::say_hello - shim(reify)),
       ]
  --> $DIR/multiple-supertraits-modulo-binder-vtable.rs:20:1
   |
LL | type First = dyn for<'a> Trait<&'static (), &'a ()>;
   | ^^^^^^^^^^

error: vtable entries: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<dyn Trait<&(), &()> as Supertrait<&()>>::_print_numbers - shim(reify)),
           Method(<dyn Trait<&(), &()> as Trait<&(), &()>>::say_hello - shim(reify)),
       ]
  --> $DIR/multiple-supertraits-modulo-binder-vtable.rs:24:1
   |
LL | type Second = dyn Trait<&'static (), &'static ()>;
   | ^^^^^^^^^^^

error: aborting due to 2 previous errors

